--- a/_config.yml
+++ b/_config.yml
@@ -13,9 +13,9 @@ description: Build Better Software
 url: "https://sqabd.github.io/" # the base hostname & protocol for your site
 url-pretty: "sqabd.github.io"
 # Social media profiles - feel free to add more here
-twitter_username:
-github_username:  sqabd
-facebook_username:
+twitter_username: sqabd
+github_username: sqabd
+facebook_username: sqabd
 #instagram_username: beyonce
 #stackoverflow_url: https://
 #googleplus_username: BobMarley
